# folderdump

./: README.md  main.py  requirements.txt  setup.cfg
folderdump/: __init__.py
folderdump/core/: __init__.py  filters.py  renderer.py  utils.py  walker.py
folderdump/gui/: __init__.py  drop_frame.py  main_window.py  style.py
folderdump/worker/: __init__.py  dump_worker.py
tests/: test_filters.py  test_renderer.py  test_walker.py
