[metadata]
name = folderdump
version = 0.1.0
description = フォルダ構成を書き出すツール
author = あなたの名前
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.10
install_requires =
    PySide6>=6.6
    qdarktheme>=1.3

[options.extras_require]
dev =
    pytest>=7.4
    pyinstaller>=6.0

[tool:pytest]
testpaths = tests

[flake8]
max-line-length = 100
